--- a/CNN-RNN/IC_A_train.ipynb
+++ b/CNN-RNN/IC_A_train.ipynb
@@ -18,29 +18,11 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sIqJsO9Rh-TE"
-      },
-      "outputs": [],
-      "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torchvision.models as models\n",
-        "from torchvision import transforms\n",
-        "from torch.utils.data import Dataset, DataLoader\n",
-        "from PIL import Image\n",
-        "import torch.optim as optim\n",
-        "import os\n",
-        "import csv\n",
-        "import json"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive')\n",
+        "import sys\n",
+        "sys.path.append('/content/drive/MyDrive/Colab Notebooks/Data/IC_dataset')"
       ],
       "metadata": {
         "colab": {
@@ -62,58 +44,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yah-ZIjIqpH2"
-      },
-      "outputs": [],
       "source": [
-        "class DecoderRNN(nn.Module):\n",
-        "    def __init__(self, embed_size, hidden_size, vocab_size, num_layers=1):\n",
-        "        super(DecoderRNN, self).__init__()\n",
-        "        self.embed_size = embed_size\n",
-        "        self.hidden_size = hidden_size\n",
-        "        self.vocab_size = vocab_size\n",
-        "        self.lstm_cell = nn.LSTMCell(embed_size, hidden_size,num_layers)\n",
-        "        self.fc_out = nn.Linear(in_features=self.hidden_size, out_features=self.vocab_size)\n",
-        "        self.embed = nn.Embedding(num_embeddings=self.vocab_size, embedding_dim=self.embed_size)\n",
-        "        self.dropout=nn.Dropout(0.5)\n",
-        "        # activations\n",
-        "        self.softmax = nn.Softmax(dim=1)\n",
-        "\n",
-        "    def forward(self, features, captions):\n",
-        "        batch_size = features.size(0)\n",
-        "        # init the hidden and cell states to zeros\n",
-        "        hidden_state = torch.zeros((batch_size, self.hidden_size)).cuda()\n",
-        "        cell_state = torch.zeros((batch_size, self.hidden_size)).cuda()\n",
-        "\n",
-        "        # define the output tensor placeholder\n",
-        "        outputs = torch.empty((batch_size, captions.shape[1], self.vocab_size)).cuda()\n",
-        "\n",
-        "        # embed the captions\n",
-        "        captions_embed = self.dropout(self.embed(captions)).cuda()\n",
-        "        # print(\"Captions_embed size :- \",captions_embed.shape)\n",
-        "        # pass the caption word by word\n",
-        "        for t in range(captions.size(1)):\n",
-        "\n",
-        "            # for the first time step the input is the feature vector\n",
-        "            if t == 0:\n",
-        "                hidden_state, cell_state = self.lstm_cell(features, (hidden_state, cell_state))\n",
-        "\n",
-        "            # for the 2nd+ time step, using teacher forcer\n",
-        "            else:\n",
-        "                # print(\"hidden_state size :- \",captions_embed[:, t, :].shape)\n",
-        "                hidden_state, cell_state = self.lstm_cell(captions_embed[:, t, :], (hidden_state, cell_state))\n",
-        "\n",
-        "            # output of the attention mechanism\n",
-        "            out = self.fc_out(hidden_state).cuda()\n",
-        "\n",
-        "            # build the output tensor\n",
-        "            outputs[:, t, :] = out.cuda()\n",
-        "\n",
-        "\n",
-        "        return outputs\n"
-      ]
+        "from model_A import ImageCaptioner,EncoderCNN, DecoderRNN\n",
+        "import os\n",
+        "import csv"
+      ],
+      "metadata": {
+        "id": "q7SgLf0Cb8Nq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -185,10 +125,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# torch.backends.cudnn.benchmark = True\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "# load_model = False\n",
-        "# save_model = True\n",
         "device\n",
         "torch.cuda.is_available()"
       ],
@@ -253,7 +190,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "num_epoch=4\n",
         "for batch in train_dataloader:\n",
         "    # print(\"shapes :- \",batch['feature'].shape,\" \",batch['caption'].shape)\n",
